@@ -1,44 +1,0 @@
-ROOM 1
-   WALL
-     1 13  25 13
-     25 13  25 1
-     25 1  1 1
-     1 1  1 13
-   MONSTER python_doommarine_mp AT 13 7
-   AMMO ammo_shells_large AMOUNT 16 AT 4 12
-   AMMO ammo_shells_large AMOUNT 16 AT 4 11
-   AMMO ammo_shells_large AMOUNT 16 AT 3 10
-   AMMO ammo_shells_large AMOUNT 16 AT 5 10
-   AMMO ammo_shells_large AMOUNT 16 AT 4 9
-   AMMO ammo_shells_large AMOUNT 16 AT 4 8
-   AMMO ammo_shells_large AMOUNT 16 AT 13 8
-   AMMO ammo_shells_large AMOUNT 16 AT 4 7
-   AMMO ammo_shells_large AMOUNT 16 AT 12 7
-   AMMO ammo_shells_large AMOUNT 16 AT 14 7
-   AMMO ammo_shells_large AMOUNT 16 AT 4 6
-   AMMO ammo_shells_large AMOUNT 16 AT 13 6
-   AMMO ammo_shells_large AMOUNT 16 AT 4 5
-   AMMO ammo_shells_large AMOUNT 16 AT 4 4
-   AMMO ammo_shells_large AMOUNT 16 AT 4 3
-   AMMO ammo_shells_large AMOUNT 16 AT 4 2
-   LIGHT AT 5 12 ON MID
-   LIGHT AT 9 12 ON MID
-   LIGHT AT 13 12 ON MID
-   LIGHT AT 17 12 ON MID
-   LIGHT AT 21 12 ON MID
-   LIGHT AT 24 11 ON MID
-   LIGHT AT 24 7 ON MID
-   LIGHT AT 24 3 ON MID
-   LIGHT AT 21 2 ON MID
-   LIGHT AT 17 2 ON MID
-   LIGHT AT 13 2 ON MID
-   LIGHT AT 9 2 ON MID
-   LIGHT AT 5 2 ON MID
-   LIGHT AT 2 3 ON MID
-   LIGHT AT 2 7 ON MID
-   LIGHT AT 2 11 ON MID
-   SPAWN PLAYER AT 4 10
-   INSIDE AT 4 11
-END
-
-END.
